# Convulational-Vision-Transformer

./: kaggle.json  main.py  pyproject.toml
src/: config.py  dataset.py  download.py  inference.py  loss.py  model.py  segmentation.py  train.py
